--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,7 +36,16 @@
     "titleBar.activeBackground": "#68217a",
     "titleBar.activeForeground": "#e7e7e7",
     "titleBar.inactiveBackground": "#68217a99",
-    "titleBar.inactiveForeground": "#e7e7e799"
+    "titleBar.inactiveForeground": "#e7e7e799",
+    "editorGroup.border": "#8a2ca2",
+    "panel.border": "#8a2ca2",
+    "sideBar.border": "#8a2ca2",
+    "statusBar.border": "#68217a",
+    "titleBar.border": "#68217a",
+    "statusBar.debuggingBackground": "#337a21",
+    "statusBar.debuggingBorder": "#337a21",
+    "statusBar.debuggingForeground": "#e7e7e7",
+    "tab.activeBorder": "#8a2ca2"
   },
   "peacock.color": "#68217A"
 }
