--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   ],
   "devDependencies": {
     "@types/node": "^16.7.10",
+    "@yarnpkg/sdks": "^2.4.2-rc.5",
     "eslint": "^7.32.0",
     "prettier": "^2.3.2",
-    "typescript": "^4.4.2"
+    "typescript": "4.3.5"
   },
   "packageManager": "yarn@3.0.1"
 }
