--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -14,6 +14,6 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "prettier": "^2.3.2",
-    "typescript": "^4.4.2"
+    "typescript": "4.3.5"
   }
 }
